--- a/sass/home.scss
+++ b/sass/home.scss
@@ -1,6 +1,8 @@
 body {
     font-family: 'Roboto', sans-serif;
     width: 100%;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 .mainheader {
