--- a/sass/settings.scss
+++ b/sass/settings.scss
@@ -40,11 +40,6 @@ p {
 }
 
 // reset some default
-body {
-    margin: 0;
-    box-sizing: border-box;
-}
-
 a:link {
     text-decoration: none;
 }
